Rewrite task 62