@@ -1,19 +1,54 @@
 package humanevaltest.unit.task62;
 
+import static org.junit.jupiter.api.Assertions.*;
+
 import java.util.*;
 
+import org.junit.jupiter.api.Test;
+
 public class TaskTest {
-    public static void main(String[] args) {
-        Task s = new Task();
-        List<Boolean> correct = Arrays.asList(
-                s.derivative(new ArrayList<>(Arrays.asList(3, 1, 2, 4, 5))).equals(Arrays.asList(1, 4, 12, 20)),
-                s.derivative(new ArrayList<>(Arrays.asList(1, 2, 3))).equals(Arrays.asList(2, 6)),
-                s.derivative(new ArrayList<>(Arrays.asList(3, 2, 1))).equals(Arrays.asList(2, 2)),
-                s.derivative(new ArrayList<>(Arrays.asList(3, 2, 1, 0, 4))).equals(Arrays.asList(2, 2, 0, 16)),
-                s.derivative(List.of(1)).equals(List.of())
-        );
-        if (correct.contains(false)) {
-            throw new AssertionError();
-        }
+    @Test
+    public void testDerivative_typicalCoefficients_calculatesDifferentiatedCoefficients() {
+        Task task = new Task();
+        List<Integer> coefficients = Arrays.asList(3, 1, 2, 4, 5);
+        List<Integer> expectedDifferentiatedCoefficients = Arrays.asList(1, 4, 12, 20);
+        List<Integer> actualDifferentiatedCoefficients = task.derivative(coefficients);
+        assertEquals(expectedDifferentiatedCoefficients, actualDifferentiatedCoefficients);
+    }
+
+    @Test
+    public void testDerivative_increasingCoefficients_calculatesDifferentiatedCoefficients() {
+        Task task = new Task();
+        List<Integer> coefficients = Arrays.asList(1, 2, 3);
+        List<Integer> expectedDifferentiatedCoefficients = Arrays.asList(2, 6);
+        List<Integer> actualDifferentiatedCoefficients = task.derivative(coefficients);
+        assertEquals(expectedDifferentiatedCoefficients, actualDifferentiatedCoefficients);
+    }
+
+    @Test
+    public void testDerivative_decreasingCoefficients_calculatesDifferentiatedCoefficients() {
+        Task task = new Task();
+        List<Integer> coefficients = Arrays.asList(3, 2, 1);
+        List<Integer> expectedDifferentiatedCoefficients = Arrays.asList(2, 2);
+        List<Integer> actualDifferentiatedCoefficients = task.derivative(coefficients);
+        assertEquals(expectedDifferentiatedCoefficients, actualDifferentiatedCoefficients);
+    }
+
+    @Test
+    public void testDerivative_withZeroCoefficient_calculatesDifferentiatedCoefficients() {
+        Task task = new Task();
+        List<Integer> coefficients = Arrays.asList(3, 2, 1, 0, 4);
+        List<Integer> expectedDifferentiatedCoefficients = Arrays.asList(2, 2, 0, 16);
+        List<Integer> actualDifferentiatedCoefficients = task.derivative(coefficients);
+        assertEquals(expectedDifferentiatedCoefficients, actualDifferentiatedCoefficients);
+    }
+
+    @Test
+    public void testDerivative_onlyConstant_returnsNoDifferentiatedCoefficients() {
+        Task task = new Task();
+        List<Integer> coefficients = List.of(1);
+        List<Integer> expectedDifferentiatedCoefficients = List.of();
+        List<Integer> actualDifferentiatedCoefficients = task.derivative(coefficients);
+        assertEquals(expectedDifferentiatedCoefficients, actualDifferentiatedCoefficients);
     }
 }
